--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+:root{
+  --accent-color: #A06FAF;
+}
+
 * {
     font-family: Inter, sans-serif;
     color: #344054;
+    padding: 0;
+    margin: 0;
   }
 
 ::-webkit-scrollbar {
@@ -10,11 +16,11 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #fff;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #a7a7a7;
+  background: #d9d9d9;
   border-radius: 10px;
 }
 
