--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
-:root{
-  --accent-color: #A06FAF;
+:root {
+  --accent-color: #a06faf;
+  --success: #45be72;
+  --danger: #be4545;
+  --warning: #be8a45;
+  --color: #344054;
 }
 
 * {
-    font-family: Inter, sans-serif;
-    color: #344054;
-    padding: 0;
-    margin: 0;
-  }
+  font-family: Inter, sans-serif;
+  color: #344054;
+  padding: 0;
+  margin: 0;
+}
 
 ::-webkit-scrollbar {
   width: 7px;
@@ -28,6 +32,6 @@
   background: #555;
 }
 
-.display_none{
+.display_none {
   display: none;
 }
