--- a/src/components/ButtonPrimary/ButtonPrimary.css
+++ b/src/components/ButtonPrimary/ButtonPrimary.css
@@ -3,11 +3,12 @@
     color: #fff;
     border: none;
     outline: none;
-    padding: 12px 20px;
+    padding: 10px 20px;
     margin: 0;
     font-size: 16px;
     border-radius: 12px;
     cursor: pointer;
+    max-width: max-content;
 }
 
 .easy-button-primary:hover{
