feat: implementação de nova manutenção para um ou mais condomínios/blocos/aptos em datas distintas

--- a/src/components/ButtonPrimary/ButtonPrimary.css
+++ b/src/components/ButtonPrimary/ButtonPrimary.css
@@ -18,3 +18,9 @@
 .easy-button-primary-success{
     background-color: var(--success);
 }
+
+.disabled-false{
+    background-color: #00000030;
+    cursor: not-allowed;
+    pointer-events: none;
+}
