--- a/src/pages/Maintenances/Add/AddMaintenance.css
+++ b/src/pages/Maintenances/Add/AddMaintenance.css
@@ -1,26 +1,95 @@
-.container-box-inner-add-maintenance-page 
-.adicional-info{
-    opacity: .5;
-    margin-bottom: 32px;    
+.container-box-inner-add-maintenance-page {
+  display: flex;
+  flex-direction: column;
 }
 
-.easy-box-selection-group{
-    display: flex;
-        flex-direction: column;
-    gap: 8px;
-    justify-content: start;
+.container-box-inner-add-maintenance-page .adicional-info {
+  opacity: 0.5;
+  margin-bottom: 32px;
 }
 
-.easy-box-selection-group button{
-    width: fit-content;
-    padding: 8px 16px;
-    border-radius: 8px;
-    background-color: var(--accent-color);
-    color: white;
-    border: none;
-    cursor: pointer;
-    font-size: 14px;
-    display: flex;
-    align-items: center;
-    gap: 8px;
+.easy-box-selection-group {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  justify-content: start;
 }
+
+.easy-box-selection-group button {
+  width: fit-content;
+  padding: 8px 16px;
+  border-radius: 8px;
+  background-color: var(--accent-color);
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.maintenance-item-condo-container {
+  border: solid 2px #d9d9d9;
+  border-radius: 24px;
+  padding: 24px;
+  max-width: 448px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  margin: 16px 0 8px 0;
+}
+
+.maintenance-item-condo-container .maintenance-number-label {
+  position: absolute;
+  top: -15px;
+  left: 15px;
+  font-size: 13px;
+  background-color: #f6f6f6;
+  padding: 5px 12px;
+  color: #00000040;
+}
+
+.box-select-date-infos-inner-condo {
+  display: flex;
+  max-width: 500px;
+  width: 100%;
+  gap: 12px;
+}
+
+.maintenance-inner-item-condo-container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.remove-btn-inner-condos-box {
+  display: flex;
+  border: solid 2px var(--danger);
+  outline: none;
+  max-width: max-content;
+  padding: 5px 5px;
+  border-radius: 8px;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.remove-btn-inner-condos-box:hover,
+.add-condo-btn-box-add-maintenance:hover {
+  opacity: 0.5;
+}
+
+.add-condo-btn-box-add-maintenance {
+  display: flex;
+  border: solid 2px #d9d9d9;
+  color: #00000070;
+  font-weight: 600;
+  outline: none;
+  max-width: max-content;
+  padding: 5px 5px;
+  border-radius: 8px;
+  background-color: transparent;
+  cursor: pointer;
+}
+
